// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
<div
  className="src-shared-components-TopcoderHeader-Auth-___style__auth___3X0_r"
>
  <a
    className="tc-btn-sm tc-btn-primary"
    href="http://accounts.topcoder-dev.com/member/registration"
  >
    Join
  </a>
  <a
    className="tc-btn-sm tc-btn-default"
    href="http://accounts.topcoder-dev.com/member"
  >
    Log In
  </a>
</div>
`;

exports[`Snapshot match 2`] = `
<div
  className="column src-shared-components-TopcoderHeader-Auth-___style__auth___3X0_r"
>
  <a
    className="tc-btn-sm tc-btn-primary"
    href="http://accounts.topcoder-dev.com/member/registration"
  >
    Join
  </a>
  <a
    className="tc-btn-sm tc-btn-default"
    href="http://accounts.topcoder-dev.com/member"
  >
    Log In
  </a>
</div>
`;
